# parted-record

./: .envrc  .gitignore  PLAN.md  README.md  SESSION_STATE.md  index.html  pyproject.toml
docs/: results.html
notebooks/: dawdreamer.ipynb  faust-jax-tutorial.ipynb  jax.ipynb  jupylet.ipynb  torchaudio.ipynb
notebooks/.ipynb_checkpoints/: dawdreamer-checkpoint.ipynb  faust-jax-tutorial-checkpoint.ipynb  grad-checkpoint.ipynb  jax-checkpoint.ipynb  jupylet-checkpoint.ipynb  torchaudio-checkpoint.ipynb
ptrd/: __init__.py  audio.py  demo.py  loss.py  optimizer.py  synth.py  utils.py
ptrd/jupylet_audio/: __init__.py  bundle.py  device.py  filters.py  sound.py  synth.py
ptrd/torch_audio_dsp/: __init__.py  _dsp.py  functional.py  synth.py  synth_tutorial.py
research/: IDEAS.md  README.md
