[tool.poetry]
name = "ptrd"
version = "0.1.0"
description = ""
authors = ["tripp528 <33329853+tripp528@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ptrd"}]

[tool.poetry.dependencies]
python = "3.9.1"
spotdl = "4.0.1"
dawdreamer = "0.6.14"
torch = "1.12"
demucs = "3.0.4"
jupyterlab = "^3.5.0"
scipy = "^1.9.3"
librosa = "^0.9.2"
jupylet = {path = "ext/jupylet"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
